# mlir-working-project-

./: CMakeLists.txt  CMakeLists.txt.save
src/: MyAttrs.cpp.inc  MyAttrs.h.inc  MyDialect.cpp  MyDialect.cpp.inc  MyDialect.h  MyDialect.h.inc  MyDialect.td  MyOps.cpp.inc  MyOps.h.inc  MyTypes.cpp.inc  MyTypes.h.inc  add.ll  add.mlir  example.mlir  lowered.mlir  main.cpp  test.mlir  walkthrough.mlir
